tests/ui/derives/derives-span-PartialEq-enum.stderr
error[E0369]: binary operation `==` cannot be applied to type `Error`
  --> $DIR/derives-span-PartialEq-enum.rs:9:6
   |
LL | #[derive(PartialEq)]
   |          --------- in this derive macro expansion
...
LL |      Error
   |      ^^^^^
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
   |
   = note: in this expansion of `#[derive(PartialEq)]`
   |
note: an implementation of `PartialEq` might be missing for `Error`
  --> $DIR/derives-span-PartialEq-enum.rs:4:1
   |
LL | struct Error;
   | ^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `Error` with `#[derive(PartialEq)]`
   |
LL + #[derive(PartialEq)]
LL | struct Error;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
